--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  google_sign_in: ^5.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_appauth: ^4.2.1
+  http: ^0.13.5
+  flutter_secure_storage: ^6.0.0
 
 dev_dependencies:
   flutter_test:
