--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
     sdk: flutter
   google_sign_in: ^5.4.2
   http: ^0.13.5
+  shared_preferences: ^2.0.15
+  http_interceptor: ^1.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
