--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   http: ^0.13.5
   shared_preferences: ^2.0.15
   http_interceptor: ^1.0.1
+  image_picker: ^0.8.6+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
