--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http_interceptor: ^1.0.1
   image_picker: ^0.8.6+1
   flutter_rating_bar: ^4.0.1
+  persistent_bottom_nav_bar: ^5.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
