--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   persistent_bottom_nav_bar: ^5.0.2
   carousel_slider: ^4.2.1
+  intl: ^0.18.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
