--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   persistent_bottom_nav_bar: ^5.0.2
   carousel_slider: ^4.2.1
   intl: ^0.18.0
+  expandable_text: ^2.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
