--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   carousel_slider: ^4.2.1
   intl: ^0.18.0
   expandable_text: ^2.3.0
+  google_maps_flutter: ^2.2.5
+  geolocator: ^9.0.2
+  flutter_polyline_points: ^1.0.0
+  geocoding: ^2.0.5
+  location: ^4.4.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
