--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   location: ^4.4.0
   web_socket_channel: ^2.1.0
   stomp_dart_client: ^0.4.4
+  timeago: ^3.4.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
