--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   web_socket_channel: ^2.1.0
   stomp_dart_client: ^0.4.4
   timeago: ^3.4.0
+  google_fonts: ^2.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -79,6 +80,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/default_avatar.png
+    - assets/images/button.png
+    - assets/images/login.png
+    - assets/images/background_image.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
